--- a/OfflineMapBook/OfflineMapBook/Views/MainView.xaml
+++ b/OfflineMapBook/OfflineMapBook/Views/MainView.xaml
@@ -46,7 +46,7 @@
                     </StackPanel>
                 </StackPanel>
 
-                <!-- Sync Button Area -->
+                <!-- Logout Button Area -->
                 <Border BorderBrush="#e7e7e7" BorderThickness="0,1,0,0" Grid.Row="3">
                     <StackPanel Orientation="Vertical" Margin="10,0,10,0" VerticalAlignment="Center">
                         <StackPanel Orientation="Horizontal" Margin="0,0,0,0">
@@ -59,6 +59,7 @@
                             <TextBlock Text="{Binding Source={x:Static properties:Settings.Default}, Path=MmpkDownloadDate}" Style="{StaticResource GrayText}"
                                    Margin="0,0,0,5" FontStyle="Italic"/>
                         </StackPanel>
+                        <Button Content="Logout" Command="{Binding LogoutCommand}" Style="{StaticResource FlatButton}" Height="20" Margin="0,0,0,5"></Button>
                     </StackPanel>
                 </Border>
             </Grid>
