--- a/OfflineMapBook/OfflineMapBook/Views/App.xaml
+++ b/OfflineMapBook/OfflineMapBook/Views/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="OfflineMapBook.App"
+﻿<Application x:Class="Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:esriUI="http://schemas.esri.com/arcgis/runtime/2013" 
