--- a/OfflineMapBook/OfflineMapBook/Views/DownloadView.xaml
+++ b/OfflineMapBook/OfflineMapBook/Views/DownloadView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="OfflineMapBook.DownloadView"
+﻿<UserControl x:Class="Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook.DownloadView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:OfflineMapBook"
+             xmlns:local="clr-namespace:Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="400">
     <Grid Background="#F4F4F4">
