--- a/OfflineMapBook/OfflineMapBook/Views/MainView.xaml
+++ b/OfflineMapBook/OfflineMapBook/Views/MainView.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="OfflineMapBook.MainView"
+﻿<UserControl x:Class="Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook.MainView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:OfflineMapBook"
-             xmlns:viewModels="clr-namespace:OfflineMapBook.ViewModels"
-             xmlns:converters="clr-namespace:OfflineMapBook.Converters"
-             xmlns:properties="clr-namespace:OfflineMapBook.Properties"
+             xmlns:local="clr-namespace:Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook"
+             xmlns:viewModels="clr-namespace:Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook.ViewModels"
+             xmlns:converters="clr-namespace:Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook.Converters"
+             xmlns:properties="clr-namespace:Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
