--- a/OfflineMapBook/OfflineMapBook/Views/MapView.xaml
+++ b/OfflineMapBook/OfflineMapBook/Views/MapView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="OfflineMapBook.MapView"
+﻿<UserControl x:Class="Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook.MapView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:OfflineMapBook"
-             xmlns:converters="clr-namespace:OfflineMapBook.Converters"
+             xmlns:local="clr-namespace:Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook"
+             xmlns:converters="clr-namespace:Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook.Converters"
              xmlns:esriUI="http://schemas.esri.com/arcgis/runtime/2013" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="800">
@@ -36,7 +36,7 @@
 
             <!-- Back Button -->
             <Button Style="{StaticResource FlatButton}" Command="{Binding BackCommand}" Grid.Column="0" ToolTip="Back to Main Screen">
-                <Image Source="pack://application:,,,/OfflineMapBook;component/Resources/BackTransparent.png"/>
+                <Image Source="pack://application:,,,/Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook;component/Resources/BackTransparent.png"/>
             </Button>
 
             <!-- Map Title -->
@@ -44,22 +44,22 @@
 
             <!-- Clear Button -->
             <Button Style="{StaticResource FlatButton}" Grid.Column="2" Command="{Binding ClearCommand}" ToolTip="Clear Graphics and Selection">
-                <Image Source="pack://application:,,,/OfflineMapBook;component/Resources/ClearTransparent.png"/>
+                <Image Source="pack://application:,,,/Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook;component/Resources/ClearTransparent.png"/>
             </Button>
 
             <!-- Bookmarks Button -->
             <ToggleButton Style="{StaticResource FlatToggleButton}" x:Name="toggleBookmarks"  Grid.Column="3" ToolTip="Bookmarks">
-                <Image Source="pack://application:,,,/OfflineMapBook;component/Resources/BookmarkTransparent.png"/>
+                <Image Source="pack://application:,,,/Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook;component/Resources/BookmarkTransparent.png"/>
             </ToggleButton>
 
             <!-- Search Button -->
             <ToggleButton Style="{StaticResource FlatToggleButton}" x:Name="toggleSearch"  Grid.Column="4" ToolTip="Search">
-                <Image Source="pack://application:,,,/OfflineMapBook;component/Resources/SearchTransparent.png"/>
+                <Image Source="pack://application:,,,/Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook;component/Resources/SearchTransparent.png"/>
             </ToggleButton>
 
             <!-- Legend Button -->
             <ToggleButton Style="{StaticResource FlatToggleButton}" x:Name="toggleLegend" Grid.Column="5" ToolTip="Table of Contents">
-                <Image Source="pack://application:,,,/OfflineMapBook;component/Resources/TocTransparent.png"/>
+                <Image Source="pack://application:,,,/Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook;component/Resources/TocTransparent.png"/>
             </ToggleButton>
         </Grid>
 
@@ -103,7 +103,7 @@
                         <TextBox x:Name="SearchTextBox" Width="260" Height="40" Background="#F4F4F4" BorderBrush="#3F51B5" 
                                  BorderThickness="5" FontSize="20" Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                         <Button Style="{StaticResource FlatButton}" Width="40" Height="40" Command="{Binding SearchCommand}" CommandParameter="{Binding SearchText, Mode=TwoWay}">
-                            <Image Source="pack://application:,,,/OfflineMapBook;component/Resources/SearchTransparent.png"/>
+                            <Image Source="pack://application:,,,/Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook;component/Resources/SearchTransparent.png"/>
                         </Button>
                     </StackPanel>
                 </Border>
@@ -309,17 +309,17 @@
                     <Button Style="{StaticResource FlatButton}" Width="60" Height="40" Grid.Column="1" Command="{Binding MovePrevious}"
                             Visibility="{Binding IdentifyModelsList.Count, Converter={StaticResource CountToVisibilityConverter}, ConverterParameter=chevron}"
                             ToolTip="Previous Feature">
-                        <Image Source="pack://application:,,,/OfflineMapBook;component/Resources/LeftTransparent.png"/>
+                        <Image Source="pack://application:,,,/Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook;component/Resources/LeftTransparent.png"/>
                     </Button>
                     <!-- Move to next feature button -->
                     <Button Style="{StaticResource FlatButton}" Width="60" Height="40" Grid.Column="2" Command="{Binding MoveNext}"
                             Visibility="{Binding IdentifyModelsList.Count, Converter={StaticResource CountToVisibilityConverter}, ConverterParameter=chevron}"
                             ToolTip="Next Feature">
-                        <Image Source="pack://application:,,,/OfflineMapBook;component/Resources/RightTransparent.png"/>
+                        <Image Source="pack://application:,,,/Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook;component/Resources/RightTransparent.png"/>
                     </Button>
                     <!-- Close button -->
                     <Button Style="{StaticResource FlatButton}" Width="60" Height="40" Grid.Column="3" Command="{Binding CloseIdentifyCommand}" ToolTip="Close Identify Panel">
-                        <Image Source="pack://application:,,,/OfflineMapBook;component/Resources/CloseTransparent.png"/>
+                        <Image Source="pack://application:,,,/Esri.ArcGISRuntime.OpenSourceApps.OfflineMapBook;component/Resources/CloseTransparent.png"/>
                     </Button>
                 </Grid>
             </Border>
