--- a/OfflineMapBook/OfflineMapBook_NetFramework/App.xaml
+++ b/OfflineMapBook/OfflineMapBook_NetFramework/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:esriUI="http://schemas.esri.com/arcgis/runtime/2013" 
-             StartupUri="MainWindow.xaml"
+             StartupUri="Views\MainWindow.xaml"
 			 Startup="Application_Startup">
 	<Application.Resources>
         
